feat : get elimination and all its scores
1.  get elimination with stages, matches, matchResults, matchEnds, matchScores
2. update swag docs
