# backend/docs/swagger.yaml
@@ -339,6 +339,30 @@ paths:
       summary: Create one Match
       tags:
       - Elimination
+  /api/elimination/scores/{id}:
+    get:
+      description: Get one Elimination with stages, matches, matchResults, matchEnds,
+        scores by id
+      parameters:
+      - description: Elimination ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+      summary: Show one Elimination with all scores
+      tags:
+      - Elimination
   /api/elimination/stage:
     post:
       consumes:
